# european-graduate-programs

./: .gitignore  README.md  biome.json  data.py  flake.nix  main.ipynb  main.ts  models.py  package.json  programs.ts  pyproject.toml  ruff.toml  types.ts
